<?xml version="1.0"?>
<package format="2">
  <name>part3_3_py_original_msg_example</name>
  <version>0.0.0</version>
  <description>The part3_3_py_original_msg_example package</description>

  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>original_msg_srv</build_depend>
  <build_export_depend>original_msg_srv</build_export_depend>
  <exec_depend>original_msg_srv</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
