<?xml version="1.0"?>
<package format="2">
  <name>part4_1_py_led_pub</name>
  <version>0.0.0</version>
  <description>The part4_1_py_led_pub package</description>

  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>

  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
